# Modern-Embedded-CMake-for-a-Heterogeneous-System

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
src/a/: CMakeLists.txt  main.cpp
src/a/tests/: CMakeLists.txt  main.cpp
src/b/: CMakeLists.txt  main.cpp
src/b/tests/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  print.cpp  print.hpp
src/common/tests/: CMakeLists.txt  main.cpp
